welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:13: error: not found: value coord
		coord match {
                ^ZigZag:14: error: not found: value &&
		case (x<getMondeLargeur()-1 && aig==0) => x=x+1
                                            ^ZigZag:15: error: not found: value &&
		case (x==getMondeLargeur()-1 && aig==0) => y=y+1 aig=1
                                             ^ZigZag:15: error: value aig is not a member of Int
		case (x==getMondeLargeur()-1 && aig==0) => y=y+1 aig=1
                                                                 ^ZigZag:16: error: not found: value &&
		case (x>0 && aig==1) => x=x-1
                          ^ZigZag:17: error: not found: value &&
		case (x==0 && aig==1) => y=y+1 aig=0
                           ^ZigZag:17: error: value aig is not a member of Int
		case (x==0 && aig==1) => y=y+1 aig=0
                                               ^ZigZag:18: error: missing parameter type
		case_ => x=x y=y
                ^ZigZag:18: error: value y is not a member of Int
		case_ => x=x y=y
                             ^